[package]
name = "redis-cache"
version = "0.1.0"
edition = "2021"


[dependencies]
anyhow = "1.0.75"
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
serde_with = "3.4.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread", "full"] }
